--- a/Prediction_of_Product_Sales.ipynb
+++ b/Prediction_of_Product_Sales.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPV+9NFqzCZcJNE1dE0dHcB",
+      "authorship_tag": "ABX9TyOkWCCTbqZZ8gDCaQW7Mrpw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -91,6 +91,38 @@
       "source": [],
       "metadata": {
         "id": "J5AWiW5rHB7V"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## \"Exploratory Data Analysis\""
+      ],
+      "metadata": {
+        "id": "VaeuqU_iIV6Q"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "jQWcrvnTI0iA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## \"Feature inspection\""
+      ],
+      "metadata": {
+        "id": "EU9QgGr_Ioby"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "bBUOak0VIy97"
       }
     }
   ]
